{wip} [mono] Build System.Native

--- a/src/Native/Unix/CMakeLists.txt
+++ b/src/Native/Unix/CMakeLists.txt
@@ -231,12 +231,15 @@ endfunction()
 
 include(configure.cmake)
 
-add_subdirectory(System.IO.Compression.Native)
 add_subdirectory(System.Native)
-add_subdirectory(System.Net.Http.Native)
-add_subdirectory(System.Net.Security.Native)
-add_subdirectory(System.Security.Cryptography.Native)
 
-if(APPLE)
-    add_subdirectory(System.Security.Cryptography.Native.Apple)
+if (NOT MONO)
+    add_subdirectory(System.IO.Compression.Native)
+    add_subdirectory(System.Net.Http.Native)
+    add_subdirectory(System.Net.Security.Native)
+    add_subdirectory(System.Security.Cryptography.Native)
+
+    if(APPLE)
+        add_subdirectory(System.Security.Cryptography.Native.Apple)
+    endif()
 endif()
